Bug 424030 - Transform tool crashing krita
Summary: Transform tool crashing krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 4.3.0
Platform: Other Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Ionlysleep
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-09 16:17 UTC by Ionlysleep
Modified: 2020-09-10 15:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
KritaUsageLog (828.99 KB, text/plain)
2020-07-24 11:26 UTC, Ionlysleep
Details
KritaUsageLog (828.99 KB, text/plain)
2020-07-24 11:37 UTC, Ionlysleep
Details
New-KritaUsageLog (828.99 KB, text/plain)
2020-07-24 19:32 UTC, Ionlysleep
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ionlysleep 2020-07-09 16:17:04 UTC
SUMMARY 

Everytime i open the transform tool, it could be 5 minutes or a second later, the app crashes. I don't know if it's my device causing the problem or not, but i would very much appreciate a solution. Before i burst a vein.


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Tiar 2020-07-09 16:31:57 UTC
Are you sure you're using Krita 4.3.0? If so, please go to Help -> Show Krita log for bug reports, save the file using the button, and then attach the file to this bug report.
Comment 2 Bug Janitor Service 2020-07-24 04:33:09 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Ionlysleep 2020-07-24 11:26:58 UTC
Created attachment 130364 [details]
KritaUsageLog
Comment 4 Ionlysleep 2020-07-24 11:37:13 UTC
Created attachment 130365 [details]
KritaUsageLog
Comment 5 vanyossi 2020-07-24 18:32:03 UTC
First update your krita to be at the latest stable version: that is 4.3.0

you are currently using Version: 4.2.7.1 which is old. Once you update use krita normally, it should not crash on transform tool. But if it does, do come back and report.
Comment 6 Ionlysleep 2020-07-24 19:32:37 UTC
Created attachment 130376 [details]
New-KritaUsageLog

When I opened krita, it shows the version as 4.3.0(The latest version), but since I was told that the version I had was an older one, I downloaded version 4.3.0 again, hoping that I did have an older, malfunctioning version. But the problem is still occurring.
Comment 7 vanyossi 2020-07-24 19:45:40 UTC
does the transform tool needs to be active and in use for this to happen? or can I just use it -> apply transform -> do something else?
Comment 8 Bug Janitor Service 2020-07-25 04:33:11 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 9 Tiar 2020-07-26 12:10:31 UTC
The log clearly shows the problem. There is an assert in transform tool that gets triggered multiple times, sometimes after the safe assert mentioned here, sometimes without:

06 Jul 2020 14:45:12 -0400: SAFE ASSERT (krita): "changeList.memento == memento" in file C:\Packaging\workspace\Krita_Release_Windows32_Build\krita\libs\image\tiles3\kis_memento_manager.cc, line 278
06 Jul 2020 14:46:24 -0400: ASSERT (krita): "aZ == normalizeAngle(aZ)" in file C:\Packaging\workspace\Krita_Release_Windows32_Build\krita\plugins\tools\tool_transform2\tool_transform_args.h, line 227

@lonlysleep can you please say what do you most often use transform tool for (recently; the actions that led to the crash)? Which mode do you use?

Also is that true that you get a dialog "There is a problem in Krita" or something like that, and you get an option "Abort" or "OK"? If yes, could you please click Abort and then restart Krita and send the log again?
Comment 10 Ionlysleep 2020-07-26 19:13:17 UTC
(In reply to vanyossi from comment #7)
> does the transform tool needs to be active and in use for this to happen? or
> can I just use it -> apply transform -> do something else?

From what I experienced, the transform tool needs to be used before the crash. The closest to a crash with an inactive transform tool is if I were to use it, and close it a few seconds before the krita.exe has stopped working message. The message, btw, in full is, "Krita.exe has stopped working: A problem caused the program to stop working correctly. Windows will close the program and notify you if a solution is available.". But no solution is ever suggested.
Comment 11 Ionlysleep 2020-07-26 19:25:13 UTC
(In reply to Tymond from comment #9)
> The log clearly shows the problem. There is an assert in transform tool that
> gets triggered multiple times, sometimes after the safe assert mentioned
> here, sometimes without:
> 
> 06 Jul 2020 14:45:12 -0400: SAFE ASSERT (krita): "changeList.memento ==
> memento" in file
> C:
> \Packaging\workspace\Krita_Release_Windows32_Build\krita\libs\image\tiles3\ki
> s_memento_manager.cc, line 278
> 06 Jul 2020 14:46:24 -0400: ASSERT (krita): "aZ == normalizeAngle(aZ)" in
> file
> C:
> \Packaging\workspace\Krita_Release_Windows32_Build\krita\plugins\tools\tool_t
> ransform2\tool_transform_args.h, line 227
> 
> @lonlysleep can you please say what do you most often use transform tool for
> (recently; the actions that led to the crash)? Which mode do you use?
> 
> Also is that true that you get a dialog "There is a problem in Krita" or
> something like that, and you get an option "Abort" or "OK"? If yes, could
> you please click Abort and then restart Krita and send the log again?

I use the tool in the "free" mode I think. The one that the tool opens on. I use the tool to reshape line art. I can't paint yet, so line art is basically all I do.

The message I get is, "Krita.exe has stopped working: A problem caused the program to stop working correctly. Windows will close the program and notify you if a solution is available.", but there is no abort or ok button, just a "close program" (In reply to Tymond from comment #9)
> The log clearly shows the problem. There is an assert in transform tool that
> gets triggered multiple times, sometimes after the safe assert mentioned
> here, sometimes without:
> 
> 06 Jul 2020 14:45:12 -0400: SAFE ASSERT (krita): "changeList.memento ==
> memento" in file
> C:
> \Packaging\workspace\Krita_Release_Windows32_Build\krita\libs\image\tiles3\ki
> s_memento_manager.cc, line 278
> 06 Jul 2020 14:46:24 -0400: ASSERT (krita): "aZ == normalizeAngle(aZ)" in
> file
> C:
> \Packaging\workspace\Krita_Release_Windows32_Build\krita\plugins\tools\tool_t
> ransform2\tool_transform_args.h, line 227
> 
> @lonlysleep can you please say what do you most often use transform tool for
> (recently; the actions that led to the crash)? Which mode do you use?
> 
> Also is that true that you get a dialog "There is a problem in Krita" or
> something like that, and you get an option "Abort" or "OK"? If yes, could
> you please click Abort and then restart Krita and send the log again?

I only use it to reshape line art and i mainly only use the mode that it opens on, which is "free" i believe.

As for the message i get, it says, "Krita.exe has stopped working: A problem caused the program to stop working correctly. Windows will close the program and notify you if a solution is available.". And there is no abort or ok button, just a "close program" button. No solution is ever suggested or implemented though.
Comment 12 Dmitry Kazakov 2020-09-09 22:30:59 UTC
Git commit 29333b03e561e68b60905b1ed0b629e07561ea57 by Dmitry Kazakov.
Committed on 09/09/2020 at 22:30.
Pushed by dkazakov into branch 'krita/4.3'.

Fix erratic assert in ToolTransformArgs

1) It should use fuzzy comparison for floats
2) Normalizations should happen in a standardized way

M  +6    -31   plugins/tools/tool_transform2/kis_tool_transform_config_widget.cpp
M  +0    -4    plugins/tools/tool_transform2/kis_tool_transform_config_widget.h
M  +13   -3    plugins/tools/tool_transform2/tool_transform_args.h

https://invent.kde.org/graphics/krita/commit/29333b03e561e68b60905b1ed0b629e07561ea57
Comment 13 Dmitry Kazakov 2020-09-09 22:31:12 UTC
Git commit 887dcd86852e13a22cc050ac3ae6e2ae3cde0e82 by Dmitry Kazakov.
Committed on 09/09/2020 at 22:31.
Pushed by dkazakov into branch 'master'.

Fix erratic assert in ToolTransformArgs

1) It should use fuzzy comparison for floats
2) Normalizations should happen in a standardized way

M  +6    -31   plugins/tools/tool_transform2/kis_tool_transform_config_widget.cpp
M  +0    -4    plugins/tools/tool_transform2/kis_tool_transform_config_widget.h
M  +13   -3    plugins/tools/tool_transform2/tool_transform_args.h

https://invent.kde.org/graphics/krita/commit/887dcd86852e13a22cc050ac3ae6e2ae3cde0e82
Comment 14 Ionlysleep 2020-09-10 00:44:56 UTC
   I’m sorry but, I’m extremely lost. What might this mean? Do I have to
   do something?

   Sent from Mail[1] for Windows 10

   *From: * Dmitry Kazakov[2]
   *Sent: *Wednesday, September 9, 2020 6:31 PM
   *To: * joshuaclar28@gmail.com[3]
   *Subject: *[krita] [Bug 424030] Transform tool crashing krita

   https://bugs.kde.org/show_bug.cgi?id=424030

   Dmitry Kazakov <dimula73@gmail.com> changed:

   What |Removed |Added

   ----------------------------------------------------------------------------

   Status|CONFIRMED |RESOLVED

   Latest Commit| |https://invent.kde.org/grap

   | |hics/krita/commit/29333b03e

   | |561e68b60905b1ed0b629e07561

   | |ea57

   Resolution|--- |FIXED

   --- Comment #12 from Dmitry Kazakov <dimula73@gmail.com> ---

   Git commit 29333b03e561e68b60905b1ed0b629e07561ea57 by Dmitry Kazakov.

   Committed on 09/09/2020 at 22:30.

   Pushed by dkazakov into branch 'krita/4.3'.

   Fix erratic assert in ToolTransformArgs

   1) It should use fuzzy comparison for floats

   2) Normalizations should happen in a standardized way

   M +6 -31

   plugins/tools/tool_transform2/kis_tool_transform_config_widget.cpp

   M +0 -4
   plugins/tools/tool_transform2/kis_tool_transform_config_widget.h

   M +13 -3 plugins/tools/tool_transform2/tool_transform_args.h

   https://invent.kde.org/graphics/krita/commit/29333b03e561e68b60905b1ed0b629e07561ea57

   --

   You are receiving this mail because:

   You are the assignee for the bug.

   You reported the bug.

   

   1. https://go.microsoft.com/fwlink/?LinkId=550986
   2. mailto:bugzilla_noreply@kde.org
   3. mailto:joshuaclar28@gmail.com
Comment 15 Halla Rempt 2020-09-10 07:31:05 UTC
The bug has been fixed, and the next nightly build (https://binary-factory.kde.org/job/Krita_Stable_Windows_Build/) contains the fix. The messages you got were automatically added to the bug report when the developer fixed the issue.
Comment 16 Ionlysleep 2020-09-10 13:35:43 UTC
   I’m sorry but, I’m extremely lost. What might this mean? Do I have to
   do something?

   Sent from Mail[1] for Windows 10

   *From: * Dmitry Kazakov[2]
   *Sent: *Wednesday, September 9, 2020 6:31 PM
   *To: * joshuaclar28@gmail.com[3]
   *Subject: *[krita] [Bug 424030] Transform tool crashing krita

   https://bugs.kde.org/show_bug.cgi?id=424030

   Dmitry Kazakov <dimula73@gmail.com> changed:

   What |Removed |Added

   ----------------------------------------------------------------------------

   Status|CONFIRMED |RESOLVED

   Latest Commit| |https://invent.kde.org/grap

   | |hics/krita/commit/29333b03e

   | |561e68b60905b1ed0b629e07561

   | |ea57

   Resolution|--- |FIXED

   --- Comment #12 from Dmitry Kazakov <dimula73@gmail.com> ---

   Git commit 29333b03e561e68b60905b1ed0b629e07561ea57 by Dmitry Kazakov.

   Committed on 09/09/2020 at 22:30.

   Pushed by dkazakov into branch 'krita/4.3'.

   Fix erratic assert in ToolTransformArgs

   1) It should use fuzzy comparison for floats

   2) Normalizations should happen in a standardized way

   M +6 -31

   plugins/tools/tool_transform2/kis_tool_transform_config_widget.cpp

   M +0 -4
   plugins/tools/tool_transform2/kis_tool_transform_config_widget.h

   M +13 -3 plugins/tools/tool_transform2/tool_transform_args.h

   https://invent.kde.org/graphics/krita/commit/29333b03e561e68b60905b1ed0b629e07561ea57

   --

   You are receiving this mail because:

   You are the assignee for the bug.

   You reported the bug.

   

   1. https://go.microsoft.com/fwlink/?LinkId=550986
   2. mailto:bugzilla_noreply@kde.org
   3. mailto:joshuaclar28@gmail.com
Comment 17 Ionlysleep 2020-09-10 13:41:53 UTC
   Oh! Thanks for your hard work!

   Sent from Mail[1] for Windows 10

   *From: * Boudewijn Rempt[2]
   *Sent: *Thursday, September 10, 2020 3:31 AM
   *To: * joshuaclar28@gmail.com[3]
   *Subject: *[krita] [Bug 424030] Transform tool crashing krita

   https://bugs.kde.org/show_bug.cgi?id=424030

   Boudewijn Rempt <boud@valdyas.org> changed:

   What |Removed |Added

   ----------------------------------------------------------------------------

   CC| |boud@valdyas.org

   --- Comment #15 from Boudewijn Rempt <boud@valdyas.org> ---

   The bug has been fixed, and the next nightly build

   (https://binary-factory.kde.org/job/Krita_Stable_Windows_Build/)
   contains the

   fix. The messages you got were automatically added to the bug report
   when the

   developer fixed the issue.

   --

   You are receiving this mail because:

   You are the assignee for the bug.

   You reported the bug.

   

   1. https://go.microsoft.com/fwlink/?LinkId=550986
   2. mailto:bugzilla_noreply@kde.org
   3. mailto:joshuaclar28@gmail.com
Comment 18 Ionlysleep 2020-09-10 14:10:35 UTC
   Um… I know you’re becoming increasingly annoyed by me but, all of the
   files from this link are 64-bit, while my device can only run 32-bit
   versions. I don’t know if there’s a solution for this?

   Sent from Mail[1] for Windows 10

   *From: * Boudewijn Rempt[2]
   *Sent: *Thursday, September 10, 2020 3:31 AM
   *To: * joshuaclar28@gmail.com[3]
   *Subject: *[krita] [Bug 424030] Transform tool crashing krita

   https://bugs.kde.org/show_bug.cgi?id=424030

   Boudewijn Rempt <boud@valdyas.org> changed:

   What |Removed |Added

   ----------------------------------------------------------------------------

   CC| |boud@valdyas.org

   --- Comment #15 from Boudewijn Rempt <boud@valdyas.org> ---

   The bug has been fixed, and the next nightly build

   (https://binary-factory.kde.org/job/Krita_Stable_Windows_Build/)
   contains the

   fix. The messages you got were automatically added to the bug report
   when the

   developer fixed the issue.

   --

   You are receiving this mail because:

   You are the assignee for the bug.

   You reported the bug.

   

   1. https://go.microsoft.com/fwlink/?LinkId=550986
   2. mailto:bugzilla_noreply@kde.org
   3. mailto:joshuaclar28@gmail.com
Comment 19 Tiar 2020-09-10 14:34:30 UTC
In this case you need to wait until we release at least beta version, which should be next week.
Comment 20 Ionlysleep 2020-09-10 14:48:59 UTC
   No problem.

   Sent from Mail[1] for Windows 10

   *From: * Tymond[2]
   *Sent: *Thursday, September 10, 2020 10:34 AM
   *To: * joshuaclar28@gmail.com[3]
   *Subject: *[krita] [Bug 424030] Transform tool crashing krita

   https://bugs.kde.org/show_bug.cgi?id=424030

   --- Comment #19 from Tymond <tamtamy.tymona@gmail.com> ---

   In this case you need to wait until we release at least beta version,
   which

   should be next week.

   --

   You are receiving this mail because:

   You reported the bug.

   You are the assignee for the bug.

   

   1. https://go.microsoft.com/fwlink/?LinkId=550986
   2. mailto:bugzilla_noreply@kde.org
   3. mailto:joshuaclar28@gmail.com
Comment 21 Ionlysleep 2020-09-10 15:10:47 UTC
   No problem.

   Sent from Mail[1] for Windows 10

   *From: * Tymond[2]
   *Sent: *Thursday, September 10, 2020 10:34 AM
   *To: * joshuaclar28@gmail.com[3]
   *Subject: *[krita] [Bug 424030] Transform tool crashing krita

   https://bugs.kde.org/show_bug.cgi?id=424030

   --- Comment #19 from Tymond <tamtamy.tymona@gmail.com> ---

   In this case you need to wait until we release at least beta version,
   which

   should be next week.

   --

   You are receiving this mail because:

   You reported the bug.

   You are the assignee for the bug.

   

   1. https://go.microsoft.com/fwlink/?LinkId=550986
   2. mailto:bugzilla_noreply@kde.org
   3. mailto:joshuaclar28@gmail.com