Fix erratic assert in ToolTransformArgs

1) It should use fuzzy comparison for floats
2) Normalizations should happen in a standardized way

BUG:424030